@@ -1,24 +1,30 @@
 package fi.helsinki.cs.tmc.langs.ant;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.google.common.base.Optional;
 import com.google.common.base.Throwables;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import fi.helsinki.cs.tmc.langs.*;
 import fi.helsinki.cs.tmc.langs.RunResult.Status;
+import fi.helsinki.cs.tmc.langs.testrunner.TestCaseList;
+import fi.helsinki.cs.tmc.langs.testrunner.TestRunnerMain;
+import fi.helsinki.cs.tmc.langs.testscanner.TestScanner;
+import fi.helsinki.cs.tmc.langs.utils.SourceFiles;
 import fi.helsinki.cs.tmc.langs.utils.TestResultParser;
-
-import java.io.*;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
 import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.DefaultLogger;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.ProjectHelper;
+
+import java.io.File;
+import java.io.IOException;
+import java.io.PrintStream;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 
 public class AntPlugin extends AbstractLanguagePlugin {
 
@@ -33,17 +39,15 @@ public class AntPlugin extends AbstractLanguagePlugin {
     }
 
     @Override
-    public ExerciseDesc scanExercise(Path path, String exerciseName) {
+    public Optional<ExerciseDesc> scanExercise(Path path, String exerciseName) {
         if (!isExerciseTypeCorrect(path)) {
             return null;
         }
 
-        List<String> output = startProcess(buildTestScannerArgs(path, null));
-        String outputString = "";
-        for (String line : output) {
-            outputString += line;
-        }
-        return resultParser.parseScannerOutput(outputString, exerciseName);
+        TestScanner scanner = new TestScanner();
+        SourceFiles sourceFiles = new SourceFiles();
+        sourceFiles.addSource(createPath(path.toAbsolutePath(), testDir).toFile());
+        return scanner.findTests(generateClassPath(path), sourceFiles, exerciseName);
     }
 
     @Override
@@ -57,13 +61,23 @@ public class AntPlugin extends AbstractLanguagePlugin {
             return buildRunResult;
         }
 
-        List<String> runnerArgs = buildTestRunnerArgs(path);
-        startProcess(runnerArgs);
+        TestCaseList cases = TestCaseList.fromExerciseDesc(scanExercise(path, ""));
 
+        RunResult result;
         File resultFile = new File(path.toString() + resultsFile);
-        RunResult result = resultParser.parseTestResult(resultFile);
-        resultFile.delete();
+        try {
+            TestRunnerMain runner = new TestRunnerMain();
+            runner.run(path.toString(),
+                generateClassPath(path),
+                path.toString() + resultsFile,
+                cases);
+            cases.writeToJsonFile(resultFile);
+        } catch (IOException ex) {
+            Logger.getLogger(AntPlugin.class.getName()).log(Level.SEVERE, null, ex);
+        }
 
+        result = resultParser.parseTestResult(resultFile);
+        resultFile.delete();
         return result;
     }
 
@@ -73,15 +87,15 @@ public class AntPlugin extends AbstractLanguagePlugin {
      * @param path The file path of the exercise directory.
      * @return true if build success, else return false.
      */
+    @VisibleForTesting
     protected boolean buildAntProject(Path path) {
-        final File buildFile = new File(path.toString() + File.separatorChar + "build.xml");
-        final File buildLog;
-
+        File buildFile = new File(path.toString() + File.separatorChar + "build.xml");
         Project buildProject = new Project();
         buildProject.setUserProperty("ant.file", buildFile.getAbsolutePath());
         buildProject.setProperty("javac.fork", "true");
         buildProject.init();
         buildProject.setBaseDir(path.toAbsolutePath().toFile());
+        File buildLog;
 
         try {
 
@@ -115,57 +129,6 @@ public class AntPlugin extends AbstractLanguagePlugin {
         } catch (IOException e) {
             throw Throwables.propagate(e);
         }
-    }
-
-    private List<String> buildTestScannerArgs(Path path, ClassPath classPath, String... args) {
-        List<String> scannerArgs = new ArrayList<>();
-
-        scannerArgs.add("java");
-        scannerArgs.add("-cp");
-
-        if (classPath == null) {
-            scannerArgs.add(generateClassPath(path).toString());
-        } else {
-            scannerArgs.add(classPath.toString());
-        }
-
-        scannerArgs.add("fi.helsinki.cs.tmc.testscanner.TestScanner");
-        path = path.toAbsolutePath();
-        scannerArgs.add(path.toString() + testDir);
-
-        if (args != null) {
-            Collections.addAll(scannerArgs, args);
-        }
-
-        return scannerArgs;
-    }
-
-    private List<String> buildTestRunnerArgs(Path path) {
-        List<String> runnerArgs = new ArrayList<>();
-        List<String> testMethods;
-
-        runnerArgs.add("java");
-        runnerArgs.add("-Dtmc.test_class_dir=" + path.toString() + testDir);
-        runnerArgs.add("-Dtmc.results_file=" + path.toString() + resultsFile);
-        //runnerArgs.add("-Dfi.helsinki.cs.tmc.edutestutils.defaultLocale=" + locale);
-
-        if (endorsedLibsExists(path)) {
-            runnerArgs.add("-Djava.endorsed.dirs=" + createPath(path, "lib", "endorsed"));
-        }
-
-        ClassPath classPath = generateClassPath(path);
-
-        runnerArgs.add("-cp");
-        runnerArgs.add(classPath.toString());
-        runnerArgs.add("fi.helsinki.cs.tmc.testrunner.Main");
-
-        testMethods = startProcess(buildTestScannerArgs(path, classPath, "--test-runner-format"));
-
-        for (String testMethod : testMethods) {
-            runnerArgs.add(testMethod);
-        }
-
-        return runnerArgs;
     }
 
     private ClassPath generateClassPath(Path path) {
